Bug 1226119 - Clear pending exception from script cache writing failure. r=bholley, a=lizzard